# homework_web_basic

./: .gitignore  main.py  pyproject.toml
